Fixed font weight display on iOS

--- a/src/styles/type.scss
+++ b/src/styles/type.scss
@@ -3,13 +3,13 @@
 @font-face {
     font-family: "SplineSans";
     src: url("/src/styles/fonts/SplineSans-VariableFont_wght.woff2") format("woff2-variations");
-    font-weight: 300 400 500 600 700;
+    font-weight: 300 700;
   }
 
   @font-face {
     font-family: "SpaceGrotesk";
     src: url("/src/styles/fonts/SpaceGrotesk-VariableFont_wght.woff2") format("woff2-variations");
-    font-weight: 300 400 500 600 700;
+    font-weight: 300 700;
   }
 
   @mixin pageHeading {
